--- a/logo.html
+++ b/logo.html
@@ -57,7 +57,7 @@
 <body>
 
   <div class="swipe-wrap">
-    <img src="./image/1.jpg" alt="">
+    <img src="./image/1.png" alt="">
   </div>
   <div class="left">
       <button class="button1" type="button" name="button" onclick="fnOpenRegisterFrameWin();">注册</button>
